# sith

./: .coveragerc  .env.example  .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  404.html  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS  CONTRIBUTORS.md  Doxyfile  LICENSE.old  Procfile  Procfile.dev  Procfile.pytest  Procfile.service  README.md  README.rst  TODO.md  babel.config.json  biome.json  conftest.py  crowdin.yml  docker-compose.yml  index.html  manage.py  migrate.py  mkdocs.yml  objects.inv  openapi-csrf.ts  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml  (+5 more)
.github/: auto_assign.yml  dependabot.yml
.github/workflows/: ci.yml  deploy.yml  deploy_docs.yml  taiste.yml  unittests.bak  unittests.yml
.gitlab/service_desk_templates/: thank_you.md
accounting/: admin.py  api.py  cron.py  models.py  schemas.py  tests.py  urls.py  views.py
accounting/migrations/: 0001_initial.py  0002_auto_20160128_1538.py  0002_auto_20160419_2327.py  0002_auto_20160502_0952.py  0002_auto_20160530_1001.py  0002_auto_20160814_1634.py  0002_auto_20160824_2152.py  0003_auto_20160509_0712.py  0003_auto_20160617_1520.py  0003_auto_20160824_1732.py  0003_auto_20160824_2203.py  0004_auto_20160509_0715.py  0004_auto_20160620_1307.py  0004_auto_20160824_2145.py  0004_auto_20161005_1505.py  0005_auto_20160509_0716.py  0005_auto_20160622_0953.py  0005_auto_20170324_0917.py  0006_operation_type.py  0006_remove_all_models.py  0007_auto_20160622_0959.py  0008_auto_20160622_1005.py  0009_auto_20160622_1030.py  0010_remove_operation_type.py  0011_auto_20160718_1805.py  0012_auto_20160720_1847.py  0013_auto_20160807_1923.py  0014_auto_20160807_1954.py  0015_auto_20160807_1959.py  0016_auto_20160807_2000.py  0017_auto_20160810_0547.py
accounting/widgets/: ajax_select.py  select.py
ae/: models.py  urls.py  views.py
ae/migrations/: 0001_initial.py  0002_auto_20151215_1625.py
antispam/: admin.py  apps.py  forms.py  models.py
antispam/migrations/: 0001_initial.py
api/: admin.py  api.py  auth.py  forms.py  hashers.py  models.py  permissions.py  schemas.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_apiclient_hmac_key.py
api/tests/: test_admin.py  test_api_client_controller.py  test_api_key.py  test_client.py  test_mixed_auth.py  test_third_party_auth.py
api/views/: __init__.py  api.py  club.py  counter.py  group.py  launderette.py  sas.py  serializers.py  user.py  uv.py
apikey/: admin.py  auth.py  hashers.py  models.py  tests.py
apikey/migrations/: 0001_initial.py
april/: apps.py  middleware.py  views.py
club/: admin.py  api.py  apps.py  forms.py  models.py  schemas.py  signals.py  tests.py  urls.py  views.py
club/migrations/: 0001_initial.py  0002_auto_20160202_1345.py  0002_auto_20160718_1456.py  0002_auto_20160824_2152.py  0002_club_home.py  0003_auto_20160718_1819.py  0003_auto_20160813_1448.py  0003_auto_20160902_2042.py  0003_club_owner_group.py  0004_auto_20160321_1648.py  0004_auto_20160813_1551.py  0004_auto_20160915_1057.py  0005_auto_20161120_1149.py  0006_auto_20161229_0040.py  0007_auto_20170324_0917.py  0008_auto_20170515_2214.py  0009_auto_20170822_1529.py  0009_auto_20170822_2232.py  0009_mailing_mailingsubscription.py  0010_auto_20170817_1537.py  0010_auto_20170912_2028.py  0010_club_logo.py  0011_auto_20170821_1702.py  0011_auto_20180426_2013.py  0011_club_short_description.py  0012_club_board_group_club_members_group.py  0013_alter_club_board_group_alter_club_members_group_and_more.py  0014_alter_club_options_rename_unix_name_club_slug_name_and_more.py  0015_clubrole_alter_membership_role.py  0016_clubrole_alter_membership_role.py  0017_linktype_clublink.py
club/tests/: base.py  test_api.py  test_club.py  (+10 more)
com/: __init__.py  admin.py  api.py  apps.py  calendar.py  forms.py  ics_calendar.py  models.py  schemas.py  signals.py  tests.py  urls.py  views.py
core/: __init__.py  admin.py  api.py  api_permissions.py  apps.py  auth_backends.py  baker_recipes.py  converters.py  enum.py  fields.py  forms.py  lookups.py  markdown.py  middleware.py  models.py  operations.py  schemas.py  search_indexes.py  signals.py  tests.py  urls.py  utils.py  views.py  widgets.py
counter/: __init__.py  admin.py  api.py  app.py  apps.py  baker_recipes.py  fields.py  forms.py  middleware.py  models.py  schemas.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
doc/: SYNTAX.html  SYNTAX.md  conf.py  contacts  header  index.rst  modules.dia  modules_maj.dia
docs/: index.md
eboutic/: README.md  admin.py  api.py  converters.py  forms.py  models.py  schemas.py  tests.py  urls.py  views.py
election/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
explanation/: index.html
forum/: admin.py  models.py  tests.py  urls.py  views.py
galaxy/: apps.py  models.py  ref_galaxy_state.json  tests.py  urls.py  views.py
launderette/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
matmat/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
pedagogy/: __init__.py  admin.py  api.py  forms.py  models.py  schemas.py  search_indexes.py  tests.py  urls.py  utbm_api.py  views.py
processes/: composer.py
reservation/: admin.py  api.py  forms.py  models.py  schemas.py  urls.py  views.py
rootplace/: __init__.py  admin.py  forms.py  models.py  tests.py  urls.py  views.py
sas/: admin.py  api.py  baker_recipes.py  forms.py  models.py  schemas.py  tests.py  urls.py  views.py
search/: search_index.json
sith/: __init__.py  celery.py  composer.py  environ.py  finders.py  honeypot.py  pytest.py  settings.py  settings_sample.py  sitemap.py  storage.py  testrunner.py  tests.py  toolbar_debug.py  urls.py  wsgi.py
staticfiles/: apps.py  finders.py  processors.py  storage.py
stock/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
subscription/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
timetable/: apps.py  urls.py  views.py
trombi/: __init__.py  admin.py  models.py  tests.py  urls.py  views.py
(+1200 files in other folders)
